<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"

    tools:context="com.tugas.auliaravi.studycase1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/makan_malam"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/milea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/dengan_milea"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/inputmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/masukkan_menu"
        android:textSize="15sp"
        />

    <EditText
        android:id="@+id/inputporsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="@string/masukan_porsi_makanan"
        android:textSize="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <Button
        android:id="@+id/eatbus"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputporsi"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:text="@string/eatbus"
        android:onClick="Launcheatbus"
        />

    <Button
        android:id="@+id/abnormal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/eatbus"
        android:layout_alignBottom="@id/eatbus"
        android:layout_alignRight="@id/inputporsi"
        android:layout_alignEnd="@id/inputporsi"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/abnormal"
        android:onClick="Launchabnormal"/>

    </LinearLayout>
</LinearLayout>
